# pstc-scheduler

./: .env.example  .gitignore  README.md  install.sh  pstc_scheduler_classic.py  pstc_tui.py  pyproject.toml  requirements.txt
